[package]
name = "rally_parse"
version = "0.1.0"
edition = "2021"
description = "Prototype native (Rust/PyO3) replacement for esrally.driver.runner.parse"

[lib]
name = "rally_parse"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde_json = "1"
memchr = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
